SupportModel/src/objects/Master_Category__c.object
<CustomObject>
    <fields>
        <fullName>Category_Name__c</fullName>
        <label>Category_Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>SR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_of_Effort_Hrs__c</fullName>
        <label>Unit of Effort(Hrs)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Master Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Category_Name__c</columns>
        <columns>Percentage__c</columns>
        <columns>Priority__c</columns>
        <columns>Type__c</columns>
        <columns>Unit_of_Effort_Hrs__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MC-{00000}</displayFormat>
        <label>Master Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>